[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "thoughtflow"
version = "0.1.0"
requires-python = ">=3.14"

description = "Tools to optimize (my|your) thought workflow."
license = "MIT"
readme= "README.md"
authors = [
    {name = "aboutsblank", email = "dev@aboutsblank.eu"}
]
maintainers = [
    {name = "aboutsblank", email = "dev@aboutsblank.eu"}
]

[project.scripts]
daily = "thoughtflow.daily:main"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.mypy]
check_untyped_defs = true
